--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
           <div class="program-header">
             <div class="program-info">
               <div class="program-logo">
-                <img src="src/img/skype.svg" alt="" />
+                <img src="../src/img/skype.svg" alt="" />
               </div>
               <div>
                 <h1 class="program-title">Skype</h1>
@@ -38,7 +38,7 @@
               </div>
             </div>
             <div class="program-like">
-              <img src="src/img/likeSkype.svg" alt="" />
+              <img src="../src/img/likeSkype.svg" alt="" />
               <span>102</span>
             </div>
           </div>
@@ -78,17 +78,17 @@
             <div class="program-slider">
               <div class="slider">
                 <div class="slider-carousel">
-                  <img src="src/img/skype-slider.png" alt="Skype" />
+                  <img src="../src/img/skype-slider.png" alt="Skype" />
                 </div>
                 <div class="slider-nav">
                   <div class="slider-button-left">
-                    <img src="src/img/slider-button-left.svg" alt="left" />
+                    <img src="../src/img/slider-button-left.svg" alt="left" />
                   </div>
                   <div class="slider-button-nav"></div>
                   <div class="slider-button-nav"></div>
                   <div class="slider-button-nav"></div>
                   <div class="slider-button-right">
-                    <img src="src/img/slider-button-right.svg" alt="right" />
+                    <img src="../src/img/slider-button-right.svg" alt="right" />
                   </div>
                 </div>
               </div>
@@ -145,7 +145,7 @@
                 <div class="program-description__blur"></div>
               </div>
               <button class="program-description__button">
-                <img src="src/img/Book.svg" alt="" />
+                <img src="../src/img/Book.svg" alt="" />
                 <span>Читать подробнее</span>
               </button>
             </div>
@@ -207,7 +207,7 @@
           </div>
           <div class="footer-mail">
             <span>Контакты:</span>
-            <img src="src/img/mail.svg" alt="" />
+            <img src="../src/img/mail.svg" alt="" />
             <mail>support@msetup.pro</mail>
           </div>
         </div>
