--- a/src/index.html
+++ b/src/index.html
@@ -221,7 +221,7 @@
             <span>Контакты:</span>
             <img src="../src/img/mail.svg" alt="" />
             <!-- FIXME: -->
-            <mail>support@msetup.pro</mail>
+            <a href="mailto:support@msetup.pro">support@msetup.pro</a>
           </div>
         </div>
       </div>
