--- a/src/index.html
+++ b/src/index.html
@@ -53,8 +53,7 @@
                   <tr>
                     <th>Официальный сайт</th>
                     <td>
-                      <a target="_blank" href="https://www.skype.com/ru/">
-                        skype.com
+                      www.skype.com
                       </a>
                     </td>
                   </tr>
@@ -220,7 +219,6 @@
           <div class="footer-mail">
             <span>Контакты:</span>
             <img src="../src/img/mail.svg" alt="" />
-            <!-- FIXME: -->
             <a href="mailto:support@msetup.pro">support@msetup.pro</a>
           </div>
         </div>
