--- a/src/index.html
+++ b/src/index.html
@@ -210,16 +210,16 @@
             принадлежит Microsoft Corporation
           </div>
           <div class="footer-text">
-            Официальная страница для скачивания Skypehttps://www.skype.com
+            Официальная страница для скачивания Skype www.skype.com
           </div>
           <div class="footer-text">
             С условиями использования продуктов, услуг, программного обеспечения
-            можно ознакомиться на сайте: https://www.skype.com/ru/legal
+            можно ознакомиться на сайте: www.skype.com/ru/legal
           </div>
           <div class="footer-mail">
             <span>Контакты:</span>
             <img src="../src/img/mail.svg" alt="" />
-            <a href="mailto:support@msetup.pro">support@msetup.pro</a>
+            <div>support@msetup.pro</div>
           </div>
         </div>
       </div>
