fix photo slider

--- a/src/index.html
+++ b/src/index.html
@@ -210,7 +210,7 @@
             принадлежит Microsoft Corporation
           </div>
           <div class="footer-text">
-            Официальная страница для скачивания Skype www.skype.com
+            Официальная страница приложения Skype - www.skype.com
           </div>
           <div class="footer-text">
             С условиями использования продуктов, услуг, программного обеспечения
