--- a/src/index.html
+++ b/src/index.html
@@ -32,11 +32,9 @@
                 <img src="../src/img/skype.svg" alt="" />
               </div>
               <div>
-                <h1 class="program-title">Skype</h1>
-
-                <div class="program-alike">
-                  <span>5</span>
-                  Похожие программы
+                <div>
+                  <h1 class="program-title">Skype</h1>
+                  <div>Версия 8.62.0.83</div>
                 </div>
               </div>
             </div>
@@ -54,7 +52,6 @@
                     <th>Официальный сайт</th>
                     <td>
                       www.skype.com
-                      </a>
                     </td>
                   </tr>
                   <tr>
