--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
             </div>
             <div class="program-like">
               <img src="../src/img/likeSkype.svg" alt="" />
-              <span>102</span>
+              <span></span>
             </div>
           </div>
 
