add mobile version fix PC

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,10 @@
     <header class="header">
       <div class="container">
         <div class="header-wrap">
+          <div class="burger-btn"><span></span></div>
+          <div class="program-logo" style="display: none;">
+            <img src="../src/img/skype.svg" alt="" />
+          </div>
           <h1 class="header-title">
             SoftЧто-то
           </h1>
@@ -46,7 +50,7 @@
 
           <div class="program-main">
             <div>
-              <table>
+              <table align="center">
                 <tbody>
                   <tr>
                     <th>Официальный сайт</th>
@@ -150,11 +154,13 @@
                   технология официально отключена с 1 сентября 2008 года) и
                   интеграции с Microsoft Outlook.
                 </p>
-                <div class="program-description__blur"></div>
+                <div class="program-description__blur">
+                  <img src="../src/img/blur.png" alt="" />
+                </div>
               </div>
               <button class="program-description__button">
-                <img src="../src/img/Book.svg" alt="" />
-                <span>Читать подробнее</span>
+                <span>Подробнее</span>
+                <img src="../src/img/arrow.svg" alt="" />
               </button>
             </div>
           </div>
@@ -170,29 +176,29 @@
             <div class="tags-item">Связь</div>
             <div class="tags-item">Социальные сети</div>
             <div class="tags-item">Офис</div>
-            <div class="tags-item">Офис</div>
-            <div class="tags-item">Связь</div>
-            <div class="tags-item">Социальные сети</div>
-            <div class="tags-item">Офис</div>
-            <div class="tags-item">Офис</div>
+            <div class="tags-item">Общение</div>
+            <div class="tags-item">Работа</div>
           </div>
 
           <div class="tags-platform">
-            <h2 class="tags-title">Платформы</h2>
+            <h2 class="tags-title">Android</h2>
             <div class="tags-item">IOS</div>
+            <div class="tags-item">Windows</div>
             <div class="tags-item">MacOS</div>
-            <div class="tags-item">Android</div>
-            <div class="tags-item">IOS</div>
-            <div class="tags-item">MacOS</div>
-            <div class="tags-item">IOS</div>
+            <div class="tags-item">Linux</div>
+            <div class="tags-item">Windows Phone</div>
+            <div class="tags-item">Chrome OS</div>
           </div>
 
           <div class="tags-function">
-            <h2 class="tags-title">Функции</h2>
+            <h2 class="tags-title">Звонок</h2>
             <div class="tags-item">Мессенджер</div>
-            <div class="tags-item">Социальные сети</div>
-            <div class="tags-item">Видео вызов</div>
-            <div class="tags-item">Видео вызов</div>
+            <div class="tags-item">Сообщения</div>
+            <div class="tags-item">Телефон</div>
+            <div class="tags-item">Видео-конференция</div>
+            <div class="tags-item">Голосовой чат</div>
+            <div class="tags-item">Обмен сообщениями</div>
+            <div class="tags-item">Звонки</div>
           </div>
         </div>
       </div>
