fix mobile version

--- a/src/index.html
+++ b/src/index.html
@@ -71,8 +71,8 @@
                     <td>Microsoft</td>
                   </tr>
                   <tr>
-                    <th></th>
-                    <td></td>
+                    <th class="hide"></th>
+                    <td class="hide"></td>
                   </tr>
                 </tbody>
               </table>
