active like fix mobile

--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,9 @@
               </div>
             </div>
             <div class="program-like">
-              <img src="../src/img/likeSkype.svg" alt="" />
+              <svg class="program-like__img">
+                <use xlink:href="../src/img/sprite/sprite.svg#like"></use>
+              </svg>
               <span></span>
             </div>
           </div>
@@ -212,7 +214,7 @@
             Права на продукты, услуги, скачиваемое программное обеспечение
             принадлежит Microsoft Corporation
           </div>
-          <div class="footer-text">
+          <div class="footer-text adaptive">
             Официальная страница приложения Skype - www.skype.com
           </div>
           <div class="footer-text">
