--- a/src/index.html
+++ b/src/index.html
@@ -84,13 +84,25 @@
               <div class="slider">
                 <div class="slider-carousel">
                   <div class="slide animate__animated active">
-                    <img src="../src/img/skype-slider.png" alt="Skype" />
+                    <img
+                      src="../src/img/skype-slider.png"
+                      draggable="false"
+                      alt="Skype"
+                    />
                   </div>
                   <div class="slide animate__animated">
-                    <img src="../src/img/skype-two-slider.png" alt="Skype" />
+                    <img
+                      src="../src/img/skype-two-slider.png"
+                      draggable="false"
+                      alt="Skype"
+                    />
                   </div>
                   <div class="slide animate__animated">
-                    <img src="../src/img/skype-three-slider.png" alt="Skype" />
+                    <img
+                      src="../src/img/skype-three-slider.png"
+                      draggable="false"
+                      alt="Skype"
+                    />
                   </div>
                 </div>
 
