--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,15 @@
                   </tr>
                   <tr>
                     <th>Разработчик</th>
-                    <td>Microsoft</td>
+                    <td>Microsoft Corporation</td>
+                  </tr>
+                  <tr>
+                    <th>Размер</th>
+                    <td>66.9MB</td>
+                  </tr>
+                  <tr>
+                    <th>Источник загрузки</th>
+                    <td>MultiSetup</td>
                   </tr>
                   <tr>
                     <th class="hide"></th>
