--- a/src/index.html
+++ b/src/index.html
@@ -128,6 +128,19 @@
               </div>
             </div>
 
+            <div class="program-licence">
+              <p>
+                С условиями использования продуктов, услуг, программного
+                обеспечения можно ознакомиться на сайте: www.skype.com/ru/legal
+              </p>
+
+              <p>
+                Загрузка программного обеспечения доступна в приложении
+                MultiSetup, подробнее можно ознакомиться на сайте:
+                www.msetup.pro/license
+              </p>
+            </div>
+
             <div class="program-description">
               <div class="program-description__text">
                 <p>
