fix request spam

--- a/src/index.html
+++ b/src/index.html
@@ -42,12 +42,12 @@
                 </div>
               </div>
             </div>
-            <div class="program-like">
+            <button class="program-like">
               <svg class="program-like__img">
                 <use xlink:href="../src/img/sprite/sprite.svg#like"></use>
               </svg>
               <span></span>
-            </div>
+            </button>
           </div>
 
           <div class="program-main">
