--- a/src/index.html
+++ b/src/index.html
@@ -161,33 +161,7 @@
                   Skype было сделано много улучшений, и процесс продолжается до
                   сих пор. Самая актуальная система Skype — это общение на одном
                   языке и перевод на другие языки. Эта система Skype даже снимет
-                  ограничения по международным языкам. Компания Skype
-                  Technologies была основана в 2003 году шведом Никласом
-                  Зеннстремом и датчанином Янусом Фриисом[en][11]. В создании
-                  программы Скайп участвовали эстонские программисты Ахти Хейнла
-                  (эст. Ahti Heinla), Прийт Казесалу (эст. Priit Kasesalu) и Яан
-                  Таллинн (эст. Jaan Tallinn), создавшие ранее программу для
-                  файлообмена KaZaA[12][13][14]. Первые версии программы (0.97,
-                  0.98) появились в сентябре—октябре 2003 года на сайте,
-                  декларирующем себя как шведский. Программа имела простой
-                  интерфейс, изначально адаптированный под голосовую связь, в
-                  отличие от мессенджеров вроде ICQ и MSN Messenger. Skype при
-                  инсталляции сам выбирал язык локализации Windows и имел более
-                  простую и быструю регистрацию логина, нежели в конкурирующих
-                  программах. Именно простота установки, освоения и
-                  использования программы быстро привлекли к ней внимание
-                  большого числа пользователей. В версии 1.2 впервые появился
-                  автоответчик (Voicemail), а начиная с версии 1.3 любой его
-                  владелец мог оставить сообщения другим пользователям, даже
-                  если они не использовали эту услугу. В версии 1.2 также
-                  появилась функция SkypeIn, позволяющая связать учётную запись
-                  Skype с телефонным номером. Начиная с версии 1.4 появилась
-                  возможность перенаправления звонков на другие учётные записи
-                  Skype, а также на обычные телефоны. В версии 2.0 впервые
-                  появилась возможность видеосвязи[когда?], а в 2.5 —
-                  возможность отправки SMS, организации SkypeCast (эта
-                  технология официально отключена с 1 сентября 2008 года) и
-                  интеграции с Microsoft Outlook.
+                  ограничения по международным языкам.
                 </p>
                 <div class="program-description__blur">
                   <img src="../src/img/blur.png" alt="" />
