add header and fix like

--- a/src/index.html
+++ b/src/index.html
@@ -7,25 +7,177 @@
     <title>Skype</title>
   </head>
   <body>
-    <header class="header">
-      <div class="container">
-        <div class="header-wrap">
-          <div class="burger-btn"><span></span></div>
-          <div class="program-logo" style="display: none;">
-            <img src="../src/img/skype.svg" alt="" />
+    <div class="wrapper">
+      <header class="header">
+        <div class="container">
+          <div class="header-wrap">
+            <div class="burger-btn"><span></span></div>
+            <a
+              href="https://miragen1349.github.io/soft-home/dist/"
+              class="header-info"
+            >
+              <svg class="header-logo">
+                <use xlink:href="../src/img/sprite/sprite.svg#logo"></use>
+              </svg>
+              <h1 class="header-title">
+                SoftЧто-то
+              </h1>
+            </a>
+            <nav class="header-nav">
+              <a href="#link__program" class="header-link">Программы</a>
+              <div id="link__program" class="header-link__program hidden">
+                <ul>
+                  <li class="search-item active">
+                    <a
+                      href="https://miragen1349.github.io/soft-skype/dist/index.html"
+                    >
+                      <img
+                        class="search-icon"
+                        src="../src/img/skype-logo.svg"
+                        alt="skype"
+                      />
+                      <span>Skype</span>
+                    </a>
+                  </li>
+                  <li class="search-item active">
+                    <a
+                      href="https://miragen1349.github.io/soft-skype/dist/index.html"
+                    >
+                      <img
+                        class="search-icon"
+                        src="../src/img/zoom-logo.svg"
+                        alt="Zoom"
+                      />
+                      <span>Zoom</span>
+                    </a>
+                  </li>
+                  <li class="search-item active">
+                    <a
+                      href="https://miragen1349.github.io/soft-skype/dist/index.html"
+                    >
+                      <img
+                        class="search-icon"
+                        src="../src/img/whatsapp-logo.svg"
+                        alt="Whatsapp"
+                      />
+                      <span>Whatsapp</span>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+
+              <a href="#link__tags" class="header-link">Категории</a>
+              <div id="link__tags" class="header-link__tags hidden">
+                <ul>
+                  <li class="search-item active">
+                    Связь
+                  </li>
+                  <li class="search-item active">
+                    Мессенджер
+                  </li>
+                  <li class="search-item active">
+                    Сообщения
+                  </li>
+                </ul>
+              </div>
+
+              <a href="#link__selection" class="header-link">Подборка</a>
+              <div id="link__selection" class="header-link__selection hidden">
+                <ul>
+                  <li class="search-item active">
+                    <a
+                      href="https://miragen1349.github.io/soft-skype/dist/index.html"
+                    >
+                      <img
+                        class="search-icon"
+                        src="../src/img/skype-logo.svg"
+                        alt="skype"
+                      />
+                      <span>Skype</span>
+                    </a>
+                  </li>
+                  <li class="search-item active">
+                    <a
+                      href="https://miragen1349.github.io/soft-skype/dist/index.html"
+                    >
+                      <img
+                        class="search-icon"
+                        src="../src/img/zoom-logo.svg"
+                        alt="Zoom"
+                      />
+                      <span>Zoom</span>
+                    </a>
+                  </li>
+                  <li class="search-item active">
+                    <a
+                      href="https://miragen1349.github.io/soft-skype/dist/index.html"
+                    >
+                      <img
+                        class="search-icon"
+                        src="../src/img/whatsapp-logo.svg"
+                        alt="Whatsapp"
+                      />
+                      <span>Whatsapp</span>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </nav>
+
+            <div class="header-input__wrap">
+              <input
+                type="text"
+                class="header-input"
+                placeholder="Найти софт"
+              />
+
+              <div class="search">
+                <ul class="search-items" style="display: none;">
+                  <li class="search-item active">
+                    <a
+                      href="https://miragen1349.github.io/soft-skype/dist/index.html"
+                    >
+                      <img
+                        class="search-icon"
+                        src="../src/img/skype-logo.svg"
+                        alt="skype"
+                      />
+                      <span>Skype</span>
+                    </a>
+                  </li>
+                  <li class="search-item active">
+                    <a
+                      href="https://miragen1349.github.io/soft-skype/dist/index.html"
+                    >
+                      <img
+                        class="search-icon"
+                        src="../src/img/zoom-logo.svg"
+                        alt="Zoom"
+                      />
+                      <span>Zoom</span>
+                    </a>
+                  </li>
+                  <li class="search-item active">
+                    <a
+                      href="https://miragen1349.github.io/soft-skype/dist/index.html"
+                    >
+                      <img
+                        class="search-icon"
+                        src="../src/img/whatsapp-logo.svg"
+                        alt="Whatsapp"
+                      />
+                      <span>Whatsapp</span>
+                    </a>
+                  </li>
+                  <li class="search-none hidden">
+                    Ничего не найдено
+                  </li>
+                </ul>
+              </div>
+            </div>
           </div>
-          <h1 class="header-title">
-            SoftЧто-то
-          </h1>
-          <nav class="header-nav">
-            <a href="#" class="header-link">Программы</a>
-            <a href="#" class="header-link">Категории</a>
-            <a href="#" class="header-link">Подборка</a>
-          </nav>
-          <input type="text" class="header-input" placeholder="Найти софт" />
         </div>
-      </div>
-    </header>
+      </header>
 
     <section class="program">
       <div class="container">
