--- a/src/index.html
+++ b/src/index.html
@@ -286,6 +286,13 @@
                 С условиями использования продуктов, услуг, программного
                 обеспечения можно ознакомиться на сайте: www.skype.com/ru/legal
               </p>
+              <button class="program-download">
+                <img src="../src/img/button-download.svg" alt="" />
+                <div>
+                  Скачать Skype
+                  <span>skype_msetap.exe</span>
+                </div>
+              </button>
             </div>
 
             <div class="program-description">
